# simdphrase2

./: .gitignore  AGENTS.md  README.md  SimdPhrase2.sln  TODO.md  WIP.md
SimdPhrase2/: BasicTokenizer.cs  BooleanQueryParser.cs  BreakingNGramTokenizer.cs  CommonTokens.cs  ITextTokenizer.cs  Indexer.cs  NGramTokenizer.cs  RegexTokenizer.cs  Searcher.cs  SimdPhrase2.csproj  Stats.cs  TokenUtils.cs  Utils.cs
SimdPhrase2.Benchmarks/: BM25Benchmark.cs  BooleanBenchmark.cs  DataGenerator.cs  LuceneService.cs  NGramBenchmarks.cs  Program.cs  SearchBenchmark.cs  SimdPhrase2.Benchmarks.csproj  SimdPhraseService.cs
SimdPhrase2.Benchmarks/Properties/: launchSettings.json
SimdPhrase2.Tests/: BM25Tests.cs  BasicTokenizerTests.cs  BooleanSearchTests.cs  BreakingNGramTokenizerTests.cs  CommonTokensTests.cs  EndToEndTests.cs  GallopIntersectTests.cs  IndexVerificationTests.cs  NGramTokenizerTests.cs  NaiveIntersectTests.cs  PrefixSearchTests.cs  RegexTokenizerTests.cs  RoaringishPackedTests.cs  SearcherConcurrencyTests.cs  SimdIntersectTests.cs  SimdPhrase2.Tests.csproj  UtilsTests.cs
lucene_test/: _2.cfe  _2.cfs  _2.si
reference/: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
reference/.cargo/: config.toml
reference/src/: allocator.rs  codecs.rs  db.rs  decreasing_window_iter.rs  error.rs  indexer.rs  lib.rs  roaringish.rs  searcher.rs  stats.rs  utils.rs
reference/src/codecs/: native_u32.rs  zero_copy.rs
reference/src/roaringish/: intersect.rs
reference/src/roaringish/intersect/: gallop_first.rs  gallop_second.rs  naive.rs  simd.rs
(+22 files in other folders)
