cargo-features = ["profile-rustflags"]

[package]
name = "simdphrase"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Gabriel Menezes <gabriel.jorge.menezes@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Gab-Menezes/simdphrase"
description = "Extremely fast phrase search implementation."
keywords = ["simd", "phrase", "search", "information", "retrieval"]
categories = ["algorithms", "data-structures", "database", "text-processing"]
exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
]

[dependencies]
heed = "0.21.0"
unicode-segmentation = "1.12.0"
fxhash = "0.2.1"
rkyv = { version = "0.8.10", features = ["unaligned", "pointer_width_64"] }
memmap2 = "0.9.5"
hyperloglogplus = { version = "0.4.1", features = ["const-loop"] }
bumpalo = "3.17.0"
gxhash = "3.4.1"
thiserror = "2.0.12"
log = "0.4.26"

[profile.dev]
rustflags = [
    "-C", "target-cpu=native", 
    "-Z", "tune-cpu=native",
    "-C", "llvm-args=-align-all-functions=6",
]

[profile.release]
rustflags = [
    "-C", "target-cpu=native", 
    "-Z", "tune-cpu=native",
    "-C", "llvm-args=-align-all-functions=6",
]